# Task-Aware-LLM-Council

./: .gitignore  CARC-Commands.txt  CLAUDE.md  LICENSE  PolicyReadem.md  README.md  changes.track  main.py  p4_benchmark_client.py  p4_gemma_lora_v2.jsonl  p4_rd2_val.sbatch  p4_rd2_val_1xa100.sbatch  p4_rd2_val_1xa40.sbatch  p4_rd2_val_2xa100.sbatch  p4_rd2_val_2xa40.sbatch  package-lock.json  pyproject.toml  results_p3_eval.jsonl  results_p3_eval_local.jsonl  run_benchmark_job.sh  run_council.py  run_council_job.sh  run_p1_benchmark_job.sh  run_p2_benchmark_job.sh  run_p2_job.sh  run_p3_local.sh  run_p3_policy.sh  test_orchestartor_client.py  test_policy.py  update_parquet_files.ipynb
analysis/: README.md
data/: decomposer_router_gold.jsonl
docs/: baseline-implementation.md  dev-log.md  metric.md  p4-report.md  p4-writeup.md
scratch/: audit_hardmath_extract.py  audit_musique_extract.py  benchmark_stats.py  check_force_role.py  check_musique_coverage.py  check_musique_oracle_join.py  count_routing_calls.py  diagnose_fever_qwen_regression.py  diagnose_humaneval_failures.py  diagnose_p3_gap.py  diagnose_quality_regression.py  dump_hardmath.py  dump_no_pred_box.py  dump_one.py  inspect_fact_general_targets.py  inspect_gold_format.py  inspect_musique.py  inspect_musique_abstentions.py  inspect_musique_upstream.py  inspect_p4_zeroshot.py  inspect_router_parquet.py  oracle_quality_audit.py  probe_decomposer_router.py  probe_load_fever.py  sanity_fever_wrap.py  score_humaneval_pass1.py  score_p4_results.py  strip_source_from_jsonl.py  test_lora_router_only.py  warm_specialist_cache.py
(+1 files in other folders)
