[project]
name = "nlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "council-policies",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/training",
    "packages/inference",
    "packages/data_prep",
    "packages/llm_gateway",
    "packages/benchmarking_pipeline",
    "packages/benchmark_runner",
    "packages/task_eval",
    "packages/model-quantization",
    "packages/model-orchestration",
    "packages/council_policies",
]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.uv.sources]
council-policies = { workspace = true }